<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/materialize_toolbar">


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </FrameLayout>


        </android.support.design.widget.AppBarLayout>



            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appbarlayout">

                <TextView
                    android:id="@+id/analytics_textview"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/analytics_tracker_title_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/analytics_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sb_background="@color/colorPrimary"
                    app:sb_checked_color="@color/accent"
                    app:sb_show_indicator="false" />


                <TextView
                    android:id="@+id/analytics_description_textview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/analytics_description"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/analytics_textview" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/logout_button"
                    android:text="@string/log_out_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/analytics_description_textview"
                    tools:background="@drawable/logout_button" />

            </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</layout>
